# flavioesteves.github.io

./: Cargo.toml  README.md  flavio_esteves_web-2049b366a585e0bd.js  flavio_esteves_web-2049b366a585e0bd_bg.wasm  flavio_esteves_web-2a0f24db78a21573.js  flavio_esteves_web-2a0f24db78a21573_bg.wasm  flavio_esteves_web-354bd1963ee7000b.js  flavio_esteves_web-354bd1963ee7000b_bg.wasm  flavio_esteves_web-40ff6a6c77ba0fe0.js  flavio_esteves_web-40ff6a6c77ba0fe0_bg.wasm  flavio_esteves_web-4358631757464f3a.js  flavio_esteves_web-4358631757464f3a_bg.wasm  flavio_esteves_web-668ec5499a629ba382c786d376c775d5017864668520a20f9453ed59cfc1f8f51600428ae0e801259445c7399063b16d.js  flavio_esteves_web-668ec5499a629ba382c786d376c775d5017864668520a20f9453ed59cfc1f8f51600428ae0e801259445c7399063b16d_bg.wasm  flavio_esteves_web-69484545adf7d124.js  flavio_esteves_web-69484545adf7d124_bg.wasm  flavio_esteves_web-69a4e316e3bde1da.js  flavio_esteves_web-69a4e316e3bde1da_bg.wasm  flavio_esteves_web-7d61ef998e3caa44_bg.wasm  flavio_esteves_web-b71fe315fd219347.js  flavio_esteves_web-b71fe315fd219347_bg.wasm  flavio_esteves_web-d1ae1ba87da711c7.js  flavio_esteves_web-d1ae1ba87da711c7_bg.wasm  flavio_esteves_web-d3e01ef6bb1e0970ea19f9d40b0df89fcdbf4af5253f040b8186512adfa68bf3a1f8bd3c9c94525a4ab2f4d634bc80b0.js  flavio_esteves_web-d3e01ef6bb1e0970ea19f9d40b0df89fcdbf4af5253f040b8186512adfa68bf3a1f8bd3c9c94525a4ab2f4d634bc80b0_bg.wasm  flavio_esteves_web-dd3be5e81abc880b277b76c97cbae33bcebbdd8eec3aca3476c4433de4ebca41c0fbe1e01bcecbadee31e9fd4c9e49f1.js  flavio_esteves_web-dd3be5e81abc880b277b76c97cbae33bcebbdd8eec3aca3476c4433de4ebca41c0fbe1e01bcecbadee31e9fd4c9e49f1_bg.wasm  flavio_esteves_web-e882ac7384297f90.js  flavio_esteves_web-e882ac7384297f90_bg.wasm  flavio_esteves_web-eb326d07a756ef4203afcd3d9765a03d7fdbac1bd0a1008f920497f0a5ce5d79ca0201a6bb998eaf831052909187bacb.js  index.html  styles-253f257ae091f637.css  styles-66bb96e7be0a7e2.css  styles-6b08f37eb175e168.css  styles-ea5225f43e28dc1b.css
.github/workflows/: rust.yml
sass/modules/: _about.scss  _all.scss  _contact.scss  _homepage.scss  _mobile.scss  _navbar.scss
sass/partials/: _all.scss  _base.scss  _cursor.scss  _variables.scss
src/: main.rs
src/assets/svg/: icons.rs
src/components/: cursor_animation.rs  mod.rs  navbar.rs  theme_switch.rs
src/pages/: about.rs  contact.rs  homepage.rs  mod.rs  notfound.rs
