[package]
name = "flavio_esteves_web"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]


[dependencies]
leptos ="0.5.2"
leptos_router ={version="0.5.2", features =["csr"]}
leptos_meta ="0.5.2"
console_log= "1.0.0"
log = "0.4.20"
console_error_panic_hook = "0.1.7"
wasm-bindgen="0.2.87"
web-sys={version="0.3.65", features=[
  "console",
  "MouseEvent",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "Event",
  "Node",
  "NodeList",
  "DomTokenList",
  "MediaQueryList",
]}

[dev-dependencies]
wasm-bindgen = "0.2.88"
wasm-bindgen-test="0.3.38"
web-sys={version="0.3.65", features=[
  "console",
  "MouseEvent",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "Event",
  "Node",
  "NodeList",
  "DomTokenList",
  "MediaQueryList",
]}

