[package]
name = "flavio_esteves_web"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]


[dependencies]
leptos ="0.6"
leptos_router ={version="0.6", features =["csr"]}
leptos_meta ="0.6"
console_log= "1.0.0"
log = "0.4.21"
console_error_panic_hook = "0.1.7"
wasm-bindgen="0.2.92"
web-sys={version="0.3.69", features=[
  "console",
  "MouseEvent",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "Event",
  "Node",
  "NodeList",
  "DomTokenList",
  "MediaQueryList",
]}

[dev-dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-test="0.3.42"
web-sys={version="0.3.69", features=[
  "console",
  "MouseEvent",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "Event",
  "Node",
  "NodeList",
  "DomTokenList",
  "MediaQueryList",
]}

